--- a/NWOS.app/Contents/Resources/app.nw/package.json
+++ b/NWOS.app/Contents/Resources/app.nw/package.json
@@ -2,7 +2,7 @@
   "name": "NW OS",
   "main": "./views/main.html",
   "window" : {
-    "toolbar" : false,
+    // "toolbar" : false,
     "position": "center",
     "width" : 800,
     "height" : 600,
